@@ -1,3 +1,6 @@
+2001-05-12  Willem Jan Palenstijn <palenstijn@wanadoo.nl>
+	* gump_utils.cc: ctrl-alt-s takes screenshots in Modal_gump mode
+
 2001-05-12  Dancer Vesperman <dancer@users.sourceforge.net>
 	* configure.in: Extend header file checks: sys/types, sys/socket and
 	  netdb.h. Check for getaddrinfo()
